--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "react-native": "0.55.1",
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.3",
-    "react-test-renderer": "16.3.1"
+    "react-test-renderer": "16.3.1",
+    "redux-immutable-state-invariant": "^2.1.0"
   },
   "jest": {
     "preset": "react-native"
